fixed excess whitespace hanging off the right side of the page

--- a/app/assets/stylesheets/creative.css
+++ b/app/assets/stylesheets/creative.css
@@ -345,7 +345,7 @@ header .header-content .header-content-inner p {
 }
 
 .truck {
-  width: 100%;
+  width: auto;
   text-align: top;
   position: absolute;
   top: 10%;
